k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: sample-app
  name: sample-app
  namespace: sample-app
spec:
  ingressClassName: nginx
  rules:
  - host: REPLACE_ME
    http:
      paths:
      - backend:
          service:
            name: sample-app-stable
            port:
              name: http
        path: /
        pathType: Prefix
